--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && PATH_IN=\"./data.txt\" PATH_OUT=\"asd\" node index.js "
+    "start": "tsc && PATH_IN=\"./data.txt\" PATH_OUT=\"./result.xls\" node index.js "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "fs": "0.0.1-security",
-    "process": "^0.11.10"
+    "json2csv": "^5.0.1",
+    "json2xls": "^0.1.2",
+    "process": "^0.11.10",
+    "to-excel": "^2.2.2",
+    "xlsx": "^0.16.4"
   },
   "devDependencies": {
+    "@types/json2csv": "^5.0.1",
     "@types/node": "^14.0.24"
   }
 }
