--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /exitInterface.js
 /index.js
 /Reader.js
+install_tools.bat
+node.exe
+node_etw_provider.man
+nodevars.bat
+npm
+npm.cmd
+npx
+npx.cmd
